--- a/hugo.toml
+++ b/hugo.toml
@@ -42,7 +42,7 @@ disqusShortname = 'YOUR_DISQUS_SHORTNAME'   # use disqus comments
   # misc
   disableHLJS = true                        # disable highlight.js
   disablePostNavigation = true              # disable post navigation
-  monoDarkIcon = false                       # show monochrome dark mode icon
+  monoDarkIcon = true                       # show monochrome dark mode icon
   gravatarCdn = 'GRAVATAR_CDN_LINK'         # e.g. 'https://cdn.v2ex.com/gravatar/'
   math = true                               # enable KaTeX math typesetting globally
   graphCommentId = "YOUR_GRAPH_COMMENT_ID"  # use graph comment (disqus alternative)
